--- a/01-Fundamentals-part-01/index.html
+++ b/01-Fundamentals-part-01/index.html
@@ -28,6 +28,7 @@
 <body>
 
   <h1>JavaScript Fundamentals - Part 1</h1>
-  <script src="script.js"></script>
+  <script src="assignments.js"></script>
+  <!-- <script src="script.js"></script> -->
 </body>
 </html>
