--- a/01-Fundamentals-part-01/index.html
+++ b/01-Fundamentals-part-01/index.html
@@ -1,34 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <style>
-    body{
-      height: 100vh;
-      display: flex;
-      align-items: center;
-      background: linear-gradient(to top left, #28b487, #7dd56f );
-    }
-    h1{
-      font-family: sans-serif;
-      font-size: 50px;
-      line-height: 1.3;
-      width: 100%;
-      padding: 30px;
-      text-align: center;
-      color: white;
-    } 
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <style>
+      body {
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        background: linear-gradient(to top left, #28b487, #7dd56f);
+      }
+      h1 {
+        font-family: sans-serif;
+        font-size: 50px;
+        line-height: 1.3;
+        width: 100%;
+        padding: 30px;
+        text-align: center;
+        color: white;
+      }
+    </style>
+  </head>
 
-  </style>
-</head>
-
-<body>
-
-  <h1>JavaScript Fundamentals - Part 1</h1>
-  <script src="assignments.js"></script>
-  <!-- <script src="script.js"></script> -->
-</body>
+  <body>
+    <h1>JavaScript Fundamentals - Part 1</h1>
+    <script src="../coding-challenges//JS-Fundamentals–Part 1/challenge04.js"></script>
+    <!-- <script src="assignments.js"></script> -->
+  </body>
 </html>
