completed object method assignlemt

--- a/01-Fundamentals-part-01/index.html
+++ b/01-Fundamentals-part-01/index.html
@@ -26,7 +26,7 @@
 
   <body>
     <h1>JavaScript Fundamentals - Part 1</h1>
-    <script src="../coding-challenges/JS-Fundamentals-Part-2/challenge02.js"></script>
-    <!-- <script src="assignments.js"></script> -->
+    <!-- <script src="../coding-challenges/JS-Fundamentals-Part-2/challenge02.js"></script> -->
+    <script src="assignments.js"></script>
   </body>
 </html>
