Learned about default parameters in functions

--- a/09.DataStructures and Modern Operators/index.html
+++ b/09.DataStructures and Modern Operators/index.html
@@ -16,7 +16,9 @@
       <li>Short Circuiting</li>
       <li>Nullish Coalescing Operator</li>
       <li>Logical Assignment Operator</li>
+
+      <div></div>
     </ol>
-    <script src="./Coding-Challenges/Coding-Challenge02.js"></script>
+    <script src="./11.LoopingObjects.js"></script>
   </body>
 </html>
