completed variable environment

--- a/10.CloserLookAtFunctions/index.html
+++ b/10.CloserLookAtFunctions/index.html
@@ -25,11 +25,11 @@
 
 <body>
     <div style="display: flex; justify-content: space-between;">
-        <button>Buy new place ✈</button>
+        <button id="btn">Buy new place ✈</button>
         <button>Answer poll</button>
     </div>
     <h1>A Closer Look at functions</h1>
 
-    <script src="defaultParameters.js"></script>
+    <script src="03.ArrowFunctions.js"></script>
 </body>
 </html>
