--- a/08.HowJSWorksBTS/index.html
+++ b/08.HowJSWorksBTS/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>How JavaScript works behind the scene</h1>
-    <script src="./07.Hoisting&TDZInPractice.js"></script>
-</body>
+    <script src="./10.regularVsArrowFunc.js"></script>
+  </body>
 </html>
