worked on coding challenges

--- a/09.DataStructures and Modern Operators/index.html
+++ b/09.DataStructures and Modern Operators/index.html
@@ -19,6 +19,6 @@
 
       <div></div>
     </ol>
-    <script src="./11.LoopingObjects.js"></script>
+    <script src="./Coding-Challenges/Coding-Challenge03.js"></script>
   </body>
 </html>
