--- a/10.CloserLookAtFunctions/index.html
+++ b/10.CloserLookAtFunctions/index.html
@@ -1,35 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>A closer look at functions</title>
     <style>
-        body {
-          height: 100vh;
-          /* display: flex; */
-          /* align-items: center; */
-          background: linear-gradient(to top left, #28b487, #7dd56f);
-        }
-        h1 {
-          font-family: sans-serif;
-          font-size: 50px;
-          line-height: 1.3;
-          width: 100%;
-          padding: 30px;
-          text-align: center;
-          color: white;
-        }
-      </style>
-</head>
+      body {
+        height: 100vh;
+        /* display: flex; */
+        /* align-items: center; */
+        background: linear-gradient(to top left, #28b487, #7dd56f);
+      }
+      h1 {
+        font-family: sans-serif;
+        font-size: 50px;
+        line-height: 1.3;
+        width: 100%;
+        padding: 30px;
+        text-align: center;
+        color: white;
+      }
+    </style>
+  </head>
 
-<body>
-    <div style="display: flex; justify-content: space-between;">
-        <button id="btn">Buy new place ✈</button>
-        <button>Answer poll</button>
+  <body>
+    <div style="display: flex; justify-content: space-between">
+      <button id="btn">Buy new place ✈</button>
+      <button>Answer poll</button>
     </div>
     <h1>A Closer Look at functions</h1>
 
-    <script src="03.ArrowFunctions.js"></script>
-</body>
+    <script src="02.howPassingArgumentsWork.js"></script>
+  </body>
 </html>
