--- a/10.CloserLookAtFunctions/index.html
+++ b/10.CloserLookAtFunctions/index.html
@@ -30,6 +30,6 @@
     </div>
     <h1>A Closer Look at functions</h1>
 
-    <script src="02.howPassingArgumentsWork.js"></script>
+    <script src="08.bindMethod.js"></script>
   </body>
 </html>
