--- a/10.CloserLookAtFunctions/index.html
+++ b/10.CloserLookAtFunctions/index.html
@@ -25,11 +25,11 @@
 
   <body>
     <div style="display: flex; justify-content: space-between">
-      <button id="btn">Buy new place ✈</button>
-      <button>Answer poll</button>
+      <button id="btn" class="buy">Buy new place ✈</button>
+      <button class="poll">Answer poll</button>
     </div>
     <h1>A Closer Look at functions</h1>
 
-    <script src="08.bindMethod.js"></script>
+    <script src="./CodingChallenges/Coding-Challenge02.js"></script>
   </body>
 </html>
