--- a/12.WorkingWithArrays/index.html
+++ b/12.WorkingWithArrays/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Working with Arrays </title>
-</head>
-<body>
-    <h1>Working with Arrays </h1>
-    
-    <script src="./03.ArrayFind.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Working with Arrays</title>
+  </head>
+  <body>
+    <h1>Working with Arrays</h1>
+
+    <script src="./03.forEach.js"></script>
+  </body>
 </html>
