covered till filter method

--- a/12.WorkingWithArrays/index.html
+++ b/12.WorkingWithArrays/index.html
@@ -8,6 +8,6 @@
   <body>
     <h1>Working with Arrays</h1>
 
-    <script src="./03.forEach.js"></script>
+    <script src="./CodingChallenges/CodingChallenge-01.js"></script>
   </body>
 </html>
