completed coding challenge 01 and reduce method lecture

--- a/12.WorkingWithArrays/index.html
+++ b/12.WorkingWithArrays/index.html
@@ -6,8 +6,8 @@
     <title>Working with Arrays</title>
   </head>
   <body>
-    <h1>Working with Arrays</h1>
+    <!-- <h1>Working with Arrays</h1> -->
 
-    <script src="./CodingChallenges/CodingChallenge-01.js"></script>
+    <script src="./06.reduceMethod.js"></script>
   </body>
 </html>
