completed coding challenge 2

--- a/12.WorkingWithArrays/index.html
+++ b/12.WorkingWithArrays/index.html
@@ -8,6 +8,6 @@
   <body>
     <!-- <h1>Working with Arrays</h1> -->
 
-    <script src="./06.reduceMethod.js"></script>
+    <script src="./CodingChallenges/CodingChallenge-02.js"></script>
   </body>
 </html>
