--- a/12.WorkingWithArrays/index.html
+++ b/12.WorkingWithArrays/index.html
@@ -8,6 +8,6 @@
   <body>
     <!-- <h1>Working with Arrays</h1> -->
 
-    <script src="./CodingChallenges/CofingChallenge-03.js"></script>
+    <script src="./10.some&every.js"></script>
   </body>
 </html>
